--- a/src/pages/Animation/animation.css
+++ b/src/pages/Animation/animation.css
@@ -12,7 +12,7 @@
     border: 5px solid black;
     width: 500px;
     border-radius: 5px;
-    background-image: url("./png-clipart-wedding-invitation-wood-convite-aqua-vim-corporation-board-wood-wood-wooden-parquet-texture-brown (1).png");
+    background-image: url("./animationbg.png");
     background-size: 100%;
     background-position: center;
     /* variable */
