--- a/src/pages/Animation/animation.css
+++ b/src/pages/Animation/animation.css
@@ -12,7 +12,7 @@
     border: 5px solid black;
     width: 500px;
     border-radius: 5px;
-    background-image: url("/animationbg.png");
+    background-image: url("/public/animationbg.png");
     background-size: 100%;
     background-position: center;
     /* variable */
