--- a/src/pages/components/Components/component.css
+++ b/src/pages/components/Components/component.css
@@ -36,7 +36,7 @@
 
 .background-container {
   margin: 1rem;
-  background-image: url("/public/background.jpg");
+  /* background-image: url("/public/background.jpg"); */
   padding: 1rem;
 }
 
